@@ -10,7 +10,7 @@ mlr_2.2:
   short.name (abbreviation that can be used in plots and tables) and note
   (notes regarding slight changes for the mlr integration of the learner and such).
 - makeLearner now supports some options reagrding learner error handling and output which
-  could before only be set globally via configureMlr 
+  could before only be set globally via configureMlr
 - Additional arguments for imputation functions to allow a more fine-grain
   control of dummy column creation
 - imputeMin and imputeMax now subtract or add a multiple of the range of
@@ -54,6 +54,7 @@ mlr_2.2:
 -- surv.cvglmnet
 
 - new filters:
+-- variance
 -- univariate
 -- carscore
 -- rf.importance, rf.min.depth
